--- a/template/index.html
+++ b/template/index.html
@@ -21,13 +21,13 @@
             <a class="nav-link active" aria-current="Cala analytics" href="#">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:5000/api">Base de datos api</a>
+            <a class="nav-link" href="/api">Base de datos api</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:5000/pedidos">Mostrar pedidos</a>
+            <a class="nav-link" href="/pedidos">Mostrar pedidos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:5000/graficos">Mostrar análisis</a>
+            <a class="nav-link" href="/graficos">Mostrar análisis</a>
           </li>
         </ul>
       </div>
