--- a/template/graficos.html
+++ b/template/graficos.html
@@ -14,7 +14,7 @@
     <br><br>
     <section><img src="../static/logo.png" alt=""></section>
     <br><br><br>
-<a href="http://127.0.0.1:5000/"><Button type="button" class="btn btn-secondary">Volver</Button></a>  
+<a href="/"><Button type="button" class="btn btn-secondary">Volver</Button></a>  
 
 </div>
 </body>
